--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "GUI for generating BIDS Stats Model spec json files."
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "jsonref>=1.1.0",
     "numpy>=2.1.1",
     "ttkbootstrap>=1.10.1",
 ]
