--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,9 @@
+[build-system]
+requires = ["setuptools", "setuptools-scm"]
+build-backend = "setuptools.build_meta"
+
 [project]
-name = "bids-sm-model-spec-gui"
+name = "stats_spec_architect"
 version = "0.1.0"
 description = "GUI for generating BIDS Stats Model spec json files."
 readme = "README.md"
@@ -10,3 +14,6 @@ dependencies = [
     "ttkbootstrap>=1.10.1",
     "tk>=0.1.0",
 ]
+
+[project.scripts]
+make_spec = "stats_spec_architect.__main__:main"
